# git-clear

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cmd/: branch.rs
